Complete Spots Stage 2 - responsive webpage with CSS Grid

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,4 +1,11 @@
 .page {
   background-color: #fcf5e5;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
 }
