--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,21 +1,24 @@
 .profile {
-  padding: 40px 0;
+  padding: 40px 0 36px 0;
   display: grid;
   grid-template-columns: 190px 1fr auto;
   gap: 20px;
   align-items: center;
+  border-bottom: 1px solid #000000;
 }
 .profile__avatar {
   width: 190px;
   height: 190px;
-  border-radius: 50%;
+  border-radius: 20px;
   object-fit: cover;
 }
+
 .profile__info {
   display: flex;
   flex-direction: column;
   max-width: 505px;
   flex-grow: 1;
+  align-self: flex-start;
 }
 .profile__name-wrapper {
   display: flex;
@@ -23,25 +26,27 @@
   gap: 18px;
 }
 .profile__name {
-  font-size: 48px;
+  font-size: 32px;
   font-weight: 500;
   line-height: 1;
   margin: 0;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+}
+.profile__details {
+  display: flex;
+  align-items: flex-start;
+  gap: 40px;
+  margin-top: 12px;
 }
 .profile__description {
   font-size: 18px;
   line-height: 1.2;
-  margin: 8px 0 0;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  margin: 12px 0 0;
+}
+.profile__avatar-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
 .profile__edit-button {
   background: none;
@@ -54,6 +59,7 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  margin-top: 114px;
 }
 .profile__edit-button::before {
   content: "";
