Fix all code review issues: text overflow, opacities, borders, dimensions, remove unused classes, follow Flat BEM structure

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -27,19 +27,35 @@
   line-height: 1.2;
   letter-spacing: 0;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 220px;
 }
 .card__like-button {
   width: 21px;
   height: 18px;
-  background: transparent url("../images/heart.svg") center no-repeat;
+  background: transparent url("../images/heart.svg") center/cover no-repeat;
   border: none;
   cursor: pointer;
   padding: 0;
   justify-self: end;
+  opacity: 0.4;
 }
 .card__like-button:hover {
-  opacity: 0.5;
+  opacity: 1;
 }
 .card:hover {
   cursor: pointer;
+}
+@media screen and (max-width: 1100px) {
+  .card__image {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .card__image {
+    height: 282px;
+  }
 }
