--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,19 +1,17 @@
 .header {
   background-color: #ffffff;
-  border-bottom: 1px solid #545454;
-  height: 46px;
   padding: 10px 80px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.header__content {
-  max-width: 1280px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 20px;
+@media screen and (max-width: 1100px) {
+  .header {
+    padding: 10px 20px;
+  }
 }
+
 .header__logo {
-  width: 173px;
-  height: 39px;
+  width: 94px;
+  height: 26px;
 }
