--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -4,12 +4,13 @@
   grid-template-columns: 190px 1fr auto;
   gap: 20px;
   align-items: center;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid #21212166;
 }
+
 .profile__avatar {
   width: 190px;
   height: 190px;
-  border-radius: 20px;
+  border-radius: 8px;
   object-fit: cover;
 }
 
@@ -20,34 +21,32 @@
   flex-grow: 1;
   align-self: flex-start;
 }
-.profile__name-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 18px;
-}
+
 .profile__name {
   font-size: 32px;
   font-weight: 500;
   line-height: 1;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
-.profile__details {
-  display: flex;
-  align-items: flex-start;
-  gap: 40px;
-  margin-top: 12px;
-}
+
 .profile__description {
   font-size: 18px;
   line-height: 1.2;
   margin: 12px 0 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-width: 420px;
 }
-.profile__avatar-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
+
 .profile__edit-button {
   background: none;
   border: none;
@@ -84,8 +83,14 @@
   flex-shrink: 0;
 }
 .profile__edit-button:hover {
-  opacity: 0.6;
+  opacity: 1;
 }
 .profile__add-button:hover {
   opacity: 0.8;
 }
+/* Mobile View */
+@media screen and (max-width: 630px) {
+  .header {
+    height: 84px;
+    padding: 10px 20px;
+  }
