--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,7 +1,6 @@
 .profile {
-  padding: 40px 0 36px 0;
-  display: grid;
-  grid-template-columns: 190px 1fr auto;
+  padding: 40px 0 20px 0;
+  display: flex;
   gap: 20px;
   align-items: center;
   border-bottom: 1px solid #21212166;
@@ -12,14 +11,14 @@
   height: 190px;
   border-radius: 8px;
   object-fit: cover;
+  flex-shrink: 0;
 }
 
 .profile__info {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   max-width: 505px;
-  flex-grow: 1;
-  align-self: flex-start;
 }
 
 .profile__name {
@@ -36,8 +35,8 @@
 }
 
 .profile__description {
-  font-size: 18px;
-  line-height: 1.2;
+  font-size: 16px;
+  line-height: 1;
   margin: 12px 0 0;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -45,6 +44,7 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   max-width: 420px;
+  opacity: 0.7;
 }
 
 .profile__edit-button {
@@ -52,9 +52,12 @@
   border: none;
   padding: 0;
   cursor: pointer;
-  font-size: 18px;
-  font-weight: 400;
-  color: #000000;
+  font-family: Poppins, Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  color: #212121;
+  opacity: 0.7;
   display: flex;
   align-items: center;
   gap: 8px;
@@ -69,16 +72,18 @@
   background-size: contain;
 }
 .profile__add-button {
-  min-width: 165px;
+  min-width: 149px;
   height: 52px;
   background-color: #212121;
   color: #fcf5e5;
   border: none;
   border-radius: 8px;
+  font-family: Poppins, Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
   padding: 0 32px;
   cursor: pointer;
+  margin-top: auto;
   margin-left: auto;
   flex-shrink: 0;
 }
@@ -89,8 +94,9 @@
   opacity: 0.8;
 }
 /* Mobile View */
-@media screen and (max-width: 630px) {
-  .header {
-    height: 84px;
-    padding: 10px 20px;
+@media screen and (max-width: 672px) {
+  .profile {
+    flex-direction: column;
+    text-align: center;
   }
+}
