--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -98,5 +98,34 @@
   .profile {
     flex-direction: column;
     text-align: center;
+    padding: 20px 0;
+  }
+
+  .profile__avatar {
+    width: 120px;
+    height: 120px;
+  }
+
+  .profile__info {
+    align-items: center;
+  }
+
+  .profile__name {
+    font-size: 22px;
+  }
+
+  .profile__description {
+    font-size: 14px;
+  }
+
+  .profile__edit-button {
+    margin-top: 20px;
+    justify-content: center;
+  }
+
+  .profile__add-button {
+    width: 100%;
+    margin-top: 20px;
+    margin-left: 0;
   }
 }
