--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -97,6 +97,7 @@
 @media screen and (max-width: 672px) {
   .profile {
     flex-direction: column;
+    align-items: center;
     text-align: center;
     padding: 20px 0;
   }
@@ -104,28 +105,32 @@
   .profile__avatar {
     width: 120px;
     height: 120px;
+    margin: 0 auto;
   }
 
   .profile__info {
     align-items: center;
+    width: 100%;
   }
 
   .profile__name {
     font-size: 22px;
+    text-align: center;
   }
 
   .profile__description {
     font-size: 14px;
+    text-align: center;
   }
 
   .profile__edit-button {
     margin-top: 20px;
     justify-content: center;
+    width: 100%;
   }
 
   .profile__add-button {
     width: 100%;
-    margin-top: 20px;
-    margin-left: 0;
+    margin: 20px auto 0;
   }
 }
