--- a/blocks/content.css
+++ b/blocks/content.css
@@ -3,4 +3,12 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 20px;
+  grid-template-rows: auto auto;
+  gap: 47px;
+}
+
+@media screen and (max-width: 630px) {
+  .content {
+    padding: 0 16px;
+  }
 }
