--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -94,43 +94,41 @@
   opacity: 0.8;
 }
 /* Mobile View */
-@media screen and (max-width: 672px) {
+@media screen and (max-width: 630px) {
   .profile {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 20px 0;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    justify-items: center;
+    padding: 40px 16px 36px 16px;
   }
 
   .profile__avatar {
     width: 120px;
     height: 120px;
-    margin: 0 auto;
   }
 
   .profile__info {
+    max-width: 100%;
     align-items: center;
-    width: 100%;
   }
 
   .profile__name {
-    font-size: 22px;
-    text-align: center;
+    font-size: 32px;
   }
 
   .profile__description {
-    font-size: 14px;
     text-align: center;
   }
 
   .profile__edit-button {
     margin-top: 20px;
-    justify-content: center;
-    width: 100%;
+    align-self: center;
   }
 
   .profile__add-button {
-    width: 100%;
-    margin: 20px auto 0;
+    width: 288px;
+    max-width: 100%;
+    margin-left: 0;
+    margin-top: 20px;
   }
 }
