--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -27,6 +27,7 @@
   max-width: 730px;
   width: 100%;
   position: relative;
+  box-sizing: border-box;
 }
 
 .modal__close-button {
@@ -71,7 +72,7 @@
   display: block;
   margin: 8px 0 0;
   width: 100%;
-  padding: 12px 16px;
+  padding: 16px 12px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   font-size: 20px;
@@ -101,12 +102,12 @@
 
 @media screen and (max-width: 480px) {
   .modal__container {
-    padding: 24px 20px;
+    padding: 22px 12px 12px;
   }
 
   .modal__close-button {
-    top: 24px;
-    right: 20px;
+    top: 12px;
+    right: 12px;
   }
 
   .modal__title {
