--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,5 +1,6 @@
 .card {
   max-width: 100%;
+  position: relative;
 }
 .card__image {
   width: 100%;
@@ -28,6 +29,28 @@
   overflow: hidden;
   max-width: 350px;
 }
+
+.card__delete-button {
+  position: absolute;
+  top: 18px;
+  right: 15px;
+  width: 18px;
+  height: 19px;
+  background: url("../images/delete-icon.svg") center no-repeat;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  transition: opacity 0.3s ease;
+}
+
+.card__delete-button:hover {
+  opacity: 0.6;
+}
+
 .card__like-button {
   width: 21px;
   height: 18px;
@@ -41,6 +64,10 @@
 .card__like-button:hover {
   opacity: 1;
 }
+.card__like-button_liked {
+  background-image: url("../images/like-active.svg");
+}
+
 .card:hover {
   cursor: pointer;
 }
