--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -61,6 +61,7 @@
 
 .modal__label {
   margin: 0 0 32px;
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -133,6 +134,38 @@
   top: -40px;
   right: -40px;
   background-image: url("../images/close-icon-white.svg");
+}
+
+/* Error message */
+.modal__error {
+  color: #ff0000;
+  font-size: 12px;
+  line-height: 15px;
+  opacity: 0;
+  position: absolute;
+  top: calc(100% + 5px);
+  left: 0;
+  transition: opacity 0.3s;
+}
+
+/* Show error when active */
+.modal__error_visible {
+  opacity: 1;
+}
+
+/* Invalid input styling - red border */
+.modal__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
+/* Disabled button styling */
+.modal__button_disabled {
+  background-color: transparent;
+  color: #000000;
+  border: 1px solid #000000;
+  opacity: 0.2;
+  cursor: not-allowed;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 480px) {
