--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -142,7 +142,7 @@
   font-size: 12px;
   line-height: 15px;
   opacity: 0;
-  position: absolute;
+  position: relative;
   top: calc(100% + 5px);
   left: 0;
   transition: opacity 0.3s;
